Add package dependencies

--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,12 @@ uuid = "bd9425a5-9156-4273-94e8-1ab7b6a49006"
 authors = ["Ognjen Markovic"]
 version = "1.0.0-DEV"
 
+[deps]
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
+OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
+QuantumCumulants = "35bcea6d-e19f-57db-af74-8011de6c7255"
+
 [compat]
 julia = "1"
 
