--- a/Project.toml
+++ b/Project.toml
@@ -19,6 +19,7 @@ julia = "1.6"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+Cubature = "667455a9-e2ce-5579-9412-b964f529a492"
 
 [targets]
-test = ["Test"]
+test = ["Test", "Cubature"]
